# mecanum-autonomous-navigation

./: .gitignore  frames_2026-06-29_10.36.39.gv  frames_2026-06-29_13.00.43.gv  frames_2026-06-29_14.43.17.gv  frames_2026-06-29_14.58.49.gv  frames_2026-06-29_15.16.05.gv  frames_2026-06-29_16.25.12.gv  frames_2026-06-30_09.17.19.gv  frames_2026-06-30_10.07.02.gv  frames_2026-06-30_10.39.44.gv  frames_2026-06-30_10.42.22.gv  frames_2026-06-30_11.26.03.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mecanum_bringup/lib/mecanum_bringup/: cmd_vel_bridge  tf_odom_bridge
install/mecanum_bringup/share/mecanum_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mecanum_control/lib/mecanum_control/: mecanum_control_node
install/mecanum_control/share/mecanum_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mecanum_wheel/share/mecanum_wheel/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_pkg/share/my_first_pkg/: package.ps1  package.sh
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
maps/: my_map.pgm  my_map.yaml
src/ros2_jazzy/: robot.urdf  scan.txt
src/ros2_jazzy/src/mecanum_control/: CMakeLists.txt
src/ros2_jazzy/src/mecanum_control/src/: mecanum_control_node.cpp
src/ros2_jazzy/src/mecanum_wheel/: CMakeLists.txt  package.xml
src/ros2_jazzy/src/mecanum_wheel/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/ros2_jazzy/src/mecanum_wheel/launch/: display.launch.py  gazebo_robot.launch.py  nav2.launch.py  slam.launch.py
src/ros2_jazzy/src/mecanum_wheel/maps/: empty_map.pgm
src/ros2_jazzy/src/mecanum_wheel/rviz/: mecanum_robot.rviz
src/ros2_jazzy/src/mecanum_wheel/urdf/: robot_model.xacro
src/ros2_jazzy/src/mecanum_wheel/worlds/: robot_model_world.sdf
(+49 files in other folders)
